Bug 76242 - [Regression]system boot fails
Summary: [Regression]system boot fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high blocker
Assignee: Ben Widawsky
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-17 01:38 UTC by lu hua
Modified: 2017-09-04 10:17 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (83.31 KB, text/plain)
2014-03-17 01:38 UTC, lu hua
no flags Details
uncore init fix, alternate version (1014 bytes, patch)
2014-03-18 08:57 UTC, Daniel Vetter
no flags Details | Splinter Review

Description lu hua 2014-03-17 01:38:19 UTC
Created attachment 95901 [details]
dmesg

System Environment:
--------------------------
Platform: Ironlake
Kernel: (drm-intel-nightly)9d6f0b86d8b45db3aa5a87588c659fa9e896197c

Bug detailed description:
-------------------------
Clean boot system, it fails on all platforms with -queued and -nightly kernel.

The latest known good commit: b2040f6fed736ccd2319768bc59833abe74148b8
The latest known bad commit: 876a6f24da2dd1b47b47ac849b204f45b5337a28

Call Trace:
[   88.170881]  <IRQ>  [<ffffffff8102496c>] ? arch_trigger_all_cpu_backtrace+0x60/0x68^M
[   88.170885]  [<ffffffff81071015>] ? rcu_check_callbacks+0x40b/0x4e5^M
[   88.170888]  [<ffffffff8103d44f>] ? update_process_times+0x31/0x56^M
[   88.170891]  [<ffffffff81078b61>] ? tick_sched_handle+0x30/0x3b^M
[   88.170894]  [<ffffffff81078df6>] ? tick_sched_timer+0x30/0x4c^M
[   88.170895]  [<ffffffff8104d445>] ? __run_hrtimer.isra.25+0x4a/0xa2^M
[   88.170898]  [<ffffffff8104d9fc>] ? hrtimer_interrupt+0xe3/0x1de^M
[   88.170900]  [<ffffffff810238c2>] ? smp_apic_timer_interrupt+0x36/0x46^M
[   88.170901]  [<ffffffff8172230a>] ? apic_timer_interrupt+0x6a/0x70^M
[   88.170905]  <EOI>  [<ffffffff8163b72f>] ? cpuidle_enter_state+0x43/0xa6^M
[   88.170908]  [<ffffffff8163b728>] ? cpuidle_enter_state+0x3c/0xa6^M
[   88.170910]  [<ffffffff8163b856>] ? cpuidle_idle_call+0xc4/0x10a^M
[   88.170911]  [<ffffffff81008dd9>] ? arch_cpu_idle+0x6/0x19^M
[   88.170914]  [<ffffffff81069d53>] ? cpu_startup_entry+0xa7/0x110^M
[   88.170917] Code: 69 d2 fa 00 00 00 f7 e2 48 8d 7a 01 e9 93 ff ff ff 65 8b 34 25 1c b0 00 00 66 66 90 0f ae e8 0f 31 89 c1 66 66 90 0f ae e8 0f 31 <89> c2 29 ca 39 fa 73 23 f3 90 65 44 8b 04 25 1c b0 00 00 44 39 ^M
[   88.170933] NMI backtrace for cpu 0^
Comment 2 lu hua 2014-03-17 08:29:58 UTC
(In reply to comment #1)
> Please try patch
> http://mid.gmane.org/1394842896-25175-1-git-send-email-benjamin.
> widawsky@intel.com

Fixed by this patch.
Comment 3 Jani Nikula 2014-03-17 09:14:56 UTC
(In reply to comment #2)
> (In reply to comment #1)
> > Please try patch
> > http://mid.gmane.org/1394842896-25175-1-git-send-email-benjamin.
> > widawsky@intel.com
> 
> Fixed by this patch.

Ben has the patch, reassigning.
Comment 4 Daniel Vetter 2014-03-18 08:57:48 UTC
Created attachment 95992 [details] [review]
uncore init fix, alternate version

Please test this alternate patch, thanks.
Comment 5 Rodrigo Vivi 2014-03-18 14:48:47 UTC
Patch worked for me...  Feel free to use: 
Tested-by; Rodrigo Vivi <rodrigo.vivi@gmail.com>
Comment 6 Daniel Vetter 2014-03-18 15:39:17 UTC
Fix pushed to dinq, thanks to Rodrigo for confirming it quickly.

commit 05efeebd2838f0dedf765179244a7fb543fdca8a
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Mar 18 16:26:25 2014 +0100

    drm/i915: Fix up the forcewake timer initialization
Comment 7 lu hua 2014-03-19 02:23:42 UTC
Verified.Fixed.
Comment 8 Jari Tahvanainen 2017-09-04 10:17:23 UTC
Closing old verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.